Fixed colour shift

--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -329,7 +329,7 @@ a:focus {
 .proj1 {
     background-image: url(../artwork/sign-bkg1.jpg);
     background-size: 150%;
-    background-color: #29323f;
+    background-color: #252c37;
     background-position: bottom right;
     background-repeat: no-repeat;
     padding-top: 12em;
